add notes changes to backend
