# service/services/notes/types.go
@@ -8,22 +8,22 @@ import (
 
 type GetNoteParams struct {
 	LoadDraft     bool
-	GetHistory    bool
+	GetChanges    bool
 	GetReferences bool
 }
 
 type Note struct {
-	ShortId    string                                `json:"id"`
-	UpdatedAt  time.Time                             `json:"updatedAt"`
-	UpdatedBy  string                                `json:"updatedBy"`
-	CreatedBy  string                                `json:"createdBy"`
-	CreatedAt  time.Time                             `json:"createdAt"`
-	Title      string                                `json:"title"`
-	Content    string                                `json:"content"`
-	Tags       []string                              `json:"tags"`
-	HasDraft   bool                                  `json:"hasDraft"`
-	Versions   *int32                                `json:"versions,omitempty"`
-	References *referencesService.ReferencesResponse `json:"references,omitempty"`
+	ShortId      string                                `json:"id"`
+	UpdatedAt    time.Time                             `json:"updatedAt"`
+	UpdatedBy    string                                `json:"updatedBy"`
+	CreatedBy    string                                `json:"createdBy"`
+	CreatedAt    time.Time                             `json:"createdAt"`
+	Title        string                                `json:"title"`
+	Content      string                                `json:"content"`
+	Tags         []string                              `json:"tags"`
+	HasDraft     bool                                  `json:"hasDraft"`
+	ChangesCount *int32                                `json:"changesCount,omitempty"`
+	References   *referencesService.ReferencesResponse `json:"references,omitempty"`
 }
 
 type PaginationMeta struct {
@@ -43,4 +43,17 @@ type NotesPage struct {
 
 type Statistics struct {
 	Count int64 `json:"count"`
+}
+
+type NotesChanges struct {
+	ShortId   string    `json:"shortId"`
+	NoteId    string    `json:"noteId"`
+	UpdatedAt time.Time `json:"updatedAt"`
+	UpdatedBy string    `json:"updatedBy"`
+	Change    string    `json:"change"`
+}
+
+type NotesChangesPage struct {
+	Meta  PaginationMeta `json:"meta"`
+	Items []NotesChanges `json:"items"`
 }
